intel/bench_214_new/extr_.tmuxscreen.c_screen_check_selection_with_main/log.txt
bench_214_new/extr_.tmuxscreen.c_screen_check_selection_with_main/extr_.tmuxscreen.c_screen_check_selection_with_main.c:24:13: error: use of undeclared identifier 'NULL'
        if (sel == NULL || sel->hidden)
                   ^
1 error generated.
HLS FPGA Parse FAILED.
